--- a/main.tex
+++ b/main.tex
@@ -849,7 +849,7 @@ Similar to our approach, Dig \textit{et al.}~\cite{dig} use refactoring to intro
 \section{Evaluation}
 
 \noindent
-In this section, we present an evaluation of the refactorings to introduce GrPPI patterns into sequential code. We consider five benchmarks: Matrix Multiplication, Blackscholes, Ant Colony Optimisation, Image Convolution and Fluid Animation. Characteristics of these applications are given in Table~\ref{table:XX}. For each benchmark, we start from a sequential and hand-tuned parallel version, taken either from the Parsec benchmark suite (for Blackscholes and Fluid Animation) or produced manually. In the sequential version, we introduce, using refactorings described in XX, GrPPI patterns, using interfaces to \emph{pthreads} (native) and TBB. We then compare the speedups obtained with the refactored versions with the speedups of the hand-tuned parallel version. All of our experiments are conducted on a server with Intel Xeon E5-2690 CPU with 28 cores, running at 2.6 Ghz with 256 GB of RAM. The operating system is Scientific Linux 6.2.
+In this section, we present an evaluation of the refactorings to introduce GrPPI patterns into sequential code. We consider five benchmarks benchmark applications: Matrix Multiplication, Blackscholes, Ant Colony Optimisation, Image Convolution and Fluid Animation. Characteristics of these applications are given in Table~\ref{table:XX}. For each benchmark, we start from a sequential and hand-tuned parallel version, taken either from the Parsec benchmark suite (for Blackscholes and Fluid Animation) or produced manually. In the sequential version, we introduce, using refactorings described in Section~\ref{sec:XX}, GrPPI patterns, using interfaces to \emph{pthreads} (native) and TBB. We then compare the speedups obtained with the refactored versions with the speedups of the hand-tuned parallel version. All of our experiments are conducted on a server with Intel Xeon E5-2690 CPU with 28 cores, running at 2.6 Ghz with 256 GB of RAM. The operating system is Scientific Linux 6.2.
 
 
 \subsection{Matrix Multiplication}
