Updates from Overleaf

--- a/RePhrase.bib
+++ b/RePhrase.bib
@@ -40,6 +40,15 @@
      institution = {The University of Pisa}
 }
 
+@book{Dorigo-aco-book,
+	author = {Dorigo, Marco and St\"{u}tzle, Thomas},
+	title = {Ant Colony Optimization},
+	year = {2004},
+	isbn = {0262042193},
+	publisher = {Bradford Company},
+	address = {Scituate, MA, USA},
+} 
+
 
 
 @misc{CPOCGO,
