--- a/hlpp.bib
+++ b/hlpp.bib
@@ -1621,3 +1621,15 @@ pages = "24--31"}
   year =         2015,
   note =         {\url{http://www.ctan.org/pkg/amsthm}}
 }
+
+@article{rio:2018,
+author = {David del~Rio and Manuel~F Dolz and Luis~M. Sánchez and J.~Daniel García and Marco Danelutto and Massimo Torquati},
+title ={Finding parallel patterns through static analysis in C++ applications},
+journal = {The International Journal of High Performance Computing Applications},
+volume = {32},
+number = {6},
+pages = {779-788},
+year = {2018},
+doi = {10.1177/1094342017695639},
+URL = {https://doi.org/10.1177/1094342017695639},
+}
